src/objects/Licensing_RelationShip__mdt.object
<CustomObject>
    <fields>
        <fullName>Child_License_Credential__c</fullName>
        <label>Child License Credential</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Columns_To_Dsiplay_In_Professional_Dashb__c</fullName>
        <label>Columns To Dsiplay In Professional Dashb</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Childs_Allowed__c</fullName>
        <label>Max Childs Allowed</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_License_Credential__c</fullName>
        <label>Parent License Credential</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Popup_Error_Message__c</fullName>
        <label>Popup (Error) Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Licensing Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Parent_License_Credential__c</columns>
        <columns>Child_License_Credential__c</columns>
        <columns>Is_Parent__c</columns>
        <columns>Max_Childs_Allowed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Licensing Relationships</pluralLabel>
</CustomObject>